	Bytes can also be added with:
		acme.bytenum(10)
		acme.bytestr(str(123))
		acme.bytestr(str([0,0xed,2,3,4,5,6,7,8,9,10]))
		acme.bytestr(str(bytearray([65,66,67,200,201,202,203,69,70,71])))
	An usage example is included in: TestPython.a and TestPython.py


New CLI switch: "--pdb <filename>"

New CLI switch: "--warnzoneoverlap" changes the zone overlap error to a warning.


----------------------------------------------------------------------
Section:   New in release 1.00mp
----------------------------------------------------------------------

Any extra --lib paths will now be used when searching for top level source files from the command line.

!to !sl !svl !pdb and other POs that write files will not use the --lib paths and will only write relative to the current directory.


----------------------------------------------------------------------
Section:   New in release 0.99mp
----------------------------------------------------------------------

Improved PO: "!for" now supports forward references for labels, meaning that if a label is undefined or "not sure" then extra passes will be used to try to resolve the value.
To help give a hint where the new forward reference attempts were used, a new serious error was created "Value not defined. Even after several attempts."
	-v4 will output full debug for detection of changing calculation values to allow these to be efficiently traced


----------------------------------------------------------------------
Section:   New in release 0.96mp
----------------------------------------------------------------------

Improved PO: "!binary" now has "interleave" parameter.

----------------------------------------------------------------------
Section:   New in release 0.95mp
----------------------------------------------------------------------

Added !pdb "filename.pdb"
Save program debug information file. Useful for source level debugging.

----------------------------------------------------------------------